Replace Boolean object instantiation with valueOf call + replace magic 16 with JDBC constant Types.Boolean